2.11.0-M3-git-01  TEMPLATE fixes for UserPreferences in Dark Mode
UserPreferences fixes
         - new toggle style for on/off switches
         - restyle bi-model checkboxes for Page Layout setting
         - fix a few style issues in the UserPreferences when in Dark Mode

 The JSPWiki template should by default open up in the light mode.

 Consistent css-style for the toolbar of the jspwiki wysiwyg editor

 Added Description meta-tag to improve on-page SEO

       * Added the Content-Security-Policy meta-tag to reduce the risk of XSS attacks

--- a/jspwiki-war/src/main/styles/haddock/default/responsive-viewport.less
+++ b/jspwiki-war/src/main/styles/haddock/default/responsive-viewport.less
@@ -162,8 +162,10 @@ Medium size screens,  tablets,  phones in landscape mode
 		padding-top: @padding-xs-vertical;
 		padding-bottom:@padding-xs-vertical;
 
-	    background-size: @padding-small-horizontal @padding-small-horizontal;
-	    background-position:@padding-small-horizontal center;
+	    background-position:
+			( @padding-small-horizontal + @wikiTriangleSize/2 ) @padding-small-vertical*1,
+			( @padding-small-horizontal - @wikiTriangleSize*3/2 ) @padding-small-vertical*1;
+
 	}
 	label.form-switch {
 		padding-top: @padding-small-vertical;
